[package]
name = "p0_in_rust"
version = "0.1.0"
authors = ["Josh Barthelmess <joshbarthelmess3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
dotenv = "0.15.0"
config = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.13"